# website

./: .gitignore  Cargo.toml  anketa.html  config.json  dbexample.db3  template.html
src/: auth.rs  config.rs  errors.rs  main.rs  pages.rs  post.rs  redirect.rs  state.rs
src/sitemap/: mod.rs  url.rs
static/: robots.txt  sitemap.xml
static/styles/: style.css
templates/: 401_russia.html  404.html  500.html  auth.html  base.html  main.html  post.html  posts.html  sitemap.xml
