[package]
name = "website"
version = "0.1.0"
authors = ["Мира Странная <miraityan2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.7", features = ["ssl"] }
time = "0.1.42"
openssl = "0.10"
serde_json = "1.0"
serde = "1.0"
env_logger = "0.6.2"
